Version 3.1-3

 o Fixed a bug in Effect.clmm, Effect.mer, and Effect.lme that caused failure with a data.framel named m
 
 o Fixed bug in Effect.clmm and Effect.clmm2
 
 o Improved stability of handling linear and generalized linear mixed effects models from lme4 and nlme.

Version 3.1-2

 o Fixed bug handling 'start' argument in glmm's.  Reported by Mariano Devoto; fix by Ben Bolker
 
 o Modified internal function make.ticks() so that it doesn't fail due to floating-point inaccuracy (following error reported by Joe Clayton Ford).
 
 o Check formula for presence of factor(), etc. (suggestion of Ulrike Gromping).
 
 o Fixed bug in Effect.clm() and some other methods (reported by David Barron), which didn't pass ... argument.
 
 o A warning is now printed if partial residuals are requested in a multiline plot.
 
 o Corrected plotting of partial residuals with various scalings of the y-axis and x-axis. 
 
 o Added show.strip.values argument to plot.eff() and plot.effpoly().

Version 3.1-1

 o Requires R >= 3.2.0 (requested by CRAN).

Version 3.1-0

 o Corrected and improved computation of partial residuals, fixing bug introduced by bug fix in 3.0-7.

Version 3.0-7

 o Extends to logistic ordinal response models fit using 'clm' and 'clmm' in the 'ordinal package.
 
 o Fixed bug in handling of terms like polynomials in non-focal covariates (reported by Urs Kalbitzer).
 
 o Added package tests.
 
Version 3.0-6

 o Fix bug in Effect for mer objects with 'poly' in the formula (and related issues).
 
 o Allow "||" in variance formulae in lmer4 models.
 
 o Minor bug in handling class=="array" in the Effect() method.
 
 Version 3.0-5
 
 o Fixed bug when the name of the data frame is the name of function like "sort" in mixed-effects models with lme4 (problem originally reported by Saudi Sadiq).
 
 o Fixed bug in predictor-name matching that could occur in names with periods (reported by Trevor Avery).
 
 o Fixed package imports to conform to new CRAN rules.
 