@@ -1,6 +1,6 @@
 Package: effects
 Version: 3.1-3
-Date: 2017-03-28
+Date: 2017-06-12
 Title: Effect Displays for Linear, Generalized Linear, and Other Models
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
